# YetiCompanionV1

./: README.md
Bluetooth PI Server/ROS/bluetooth_ws/: CMakeLists.txt  package.xml
Bluetooth PI Server/ROS/bluetooth_ws/msg/: bluetoothmsg.msg
Bluetooth PI Server/ROS/bluetooth_ws/src/: BTServer.cpp  BTServer.h  bluetooth.cpp
Bluetooth PI Server/standalone/: BluetoothPIServer.java  tutorial.txt
Phone Client/app/: build.gradle
Phone Client/app/src/androidTest/java/com/example/yeticompanionv1/: ExampleInstrumentedTest.java
Phone Client/app/src/main/: AndroidManifest.xml
Phone Client/app/src/main/java/com/example/yeticompanionv1/: BaseFeedback.java  BluetoothClient.java  BluetoothServer.java  BluetoothState.java  Controller.java  DeviceListAdapter.java  JoystickView.java  MainActivity.java
Phone Client/app/src/main/res/layout/: activity_main.xml  controller_layout.xml  setup_layout.xml  title_layout.xml
Phone Client/app/src/main/res/values/: colors.xml  strings.xml
Phone Client/app/src/test/java/com/example/yeticompanionv1/: ExampleUnitTest.java
Phone Client/gradle/wrapper/: gradle-wrapper.properties
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/yeticompanionv1/: BluetoothConnectionService.java  DeviceListAdapter.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
